# Goldium-web3-final

./: .dockerignore  .env.example  .env.local.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .vercelignore  AUTO_DEPLOY_SETUP.md  COMPLETE_FULLSTACK_SUMMARY.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  DEPLOY_TO_VERCEL.md  Dockerfile  FULLSTACK_DEPLOYMENT.md  LICENSE  README.md  SOLSCAN_INTEGRATION.md  deploy-fixed.sh  deploy-now.sh  deploy-to-vercel.js  docker-compose.yml  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vercel.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml
components/: GameUI.tsx  LearnCard.tsx  LiveSolscanFeed.tsx  Navbar.tsx  Portfolio.tsx  SendCard.tsx  SolscanDashboard.tsx  SolscanTracker.tsx  SplashScreen.tsx  StakeCard.tsx  SwapCard.tsx  TransactionHistory.tsx  TransactionNotifications.tsx  WalletConnect.tsx
contracts/staking/anchor/programs/goldium-staking/: Cargo.toml
contracts/staking/anchor/programs/goldium-staking/src/: lib.rs
lib/: auth.ts  database.ts  jupiter.ts  simple-storage.ts  solana.ts  staking.ts  store.ts  transaction-tracker-old.ts  transaction-tracker.ts  wallet-context.tsx
pages/: _app.tsx  characters.tsx  dashboard.tsx  game.tsx  index.tsx  learn.tsx  send.tsx  stake.tsx  swap-old.tsx  swap.tsx
prisma/: dev.db  schema.prisma
scripts/: create-token.ts  deploy-vercel.sh  deploy.sh  setup-production.sh  setup-vercel-auto-deploy.sh  (+1 more)
(+22 files in other folders)
