[package]
name = "goldium-staking"
version = "0.1.0"
description = "Goldium Staking Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "goldium_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
